--- a/requirements.in
+++ b/requirements.in
@@ -1,12 +1,9 @@
-chromadb==0.4.12
+-i https://pypi.douban.com/simple
+
 elasticsearch==8.9.0
 ipython
 langchain==0.0.300
 openai==0.28.0
-pdf2image
-pdfminer
-pdfminer-six
-pymilvus==2.3.1
+pymupdf
 streamlit==1.27.0
 tiktoken
-unstructured
