--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,6 +12,8 @@ services:
     environment:
       ES_URL: http://elasticsearch:9200
       OPENAI_API_KEY: $OPENAI_API_KEY
+      AZURE_OPENAI_API_KEY: $AZURE_OPENAI_API_KEY
+      AZURE_OPENAI_API_KEY: $AZURE_OPENAI_API_KEY
     working_dir: /app
     depends_on:
       - elasticsearch
